Fri Apr  8 09:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:
          Generate :: before CORBA::Typecode

Fri Apr  8 01:00:37 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/TypeCodeFactory/Factory_Map.cpp:
	* tao/TypeCodeFactory/Factory_Map.h:
	* tao/TypeCodeFactory/Objref_TypeCode_Factory.h:

	  New files containing TypeCode factory functions used when
	  extracting TypeCodes from CDR streams.

	* tao/TypeCodeFactory/TypeCodeFactory_Adapter_Impl.cpp
	  (extract_typecode):

	  Invoke appropriate TypeCode factory function in factory map
	  array.  This re-enables extraction of TypeCodes from CDR
	  streams.  However, applications that do this directly or
	  indirectly, such as when extracting Anys, must now link the
	  TAO_TypeCodeFactory library to their application.

	* tao/TypeCodeFactory/TypeCodeFactory_i.cpp:

	  Cosmetic tweaks.

Fri Apr  8 07:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_produce.cpp:
        * TAO_IDL/be_include/be_global.h:
        * docs/compiler.html:
          Added options -Sci and -Ssi to the TAO_IDL compiler to suppress the
          generation of the client/server inline files. The includes of that
          file are also suppressed. With this option we can easily zap
          empty generated inline files from the repo.

Thu Apr  7 22:36:20 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_component/component_cs.cpp
	  (visit_component):

	  Use the new objref_typecode visitor to generate component
	  TypeCodes.  Addresses "unresolved symbol" component TypeCode
	  link-time errors.

Thu Apr  7 21:27:55 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/Request_Context_Repository.cpp
	  (is_executed_request):
	* orbsvcs/orbsvcs/IFRService/ConstantDef_i.cpp (value_i):