@@ -26,7 +26,7 @@
 //     http://www.cs.wustl.edu/~schmidt/TAO.html
 
 // TAO_IDL - Generated from
-// be/be_codegen.cpp:291
+// be\be_codegen.cpp:291
 
 
 #include "sciop_endpointsC.h"
@@ -42,12 +42,8 @@
 #pragma option -w-rvl -w-rch -w-ccc -w-aus -w-sig
 #endif /* __BORLANDC__ */
 
-#if !defined (__ACE_INLINE__)
-#include "sciop_endpointsC.inl"
-#endif /* !defined INLINE */
-
 // TAO_IDL - Generated from
-// be/be_visitor_arg_traits.cpp:69
+// be\be_visitor_arg_traits.cpp:69
 
 // Arg traits specializations.
 namespace TAO
@@ -56,7 +52,7 @@ namespace TAO
 
 
 // TAO_IDL - Generated from
-// be/be_visitor_typecode/struct_typecode.cpp:34
+// be\be_visitor_typecode/struct_typecode.cpp:70
 
 static TAO::TypeCode::Struct_Field<char const *, CORBA::TypeCode_ptr const *> const _tao_fields_TAO_SCIOP_Endpoint_Info[] =
   {
@@ -81,12 +77,12 @@ static TAO::TypeCode::Struct<char const *,
   &_tao_tc_TAO_SCIOP_Endpoint_Info;
 
 // TAO_IDL - Generated from 
-// be/be_visitor_structure/structure_cs.cpp:68
+// be\be_visitor_structure/structure_cs.cpp:66
 
 
 
 // TAO_IDL - Generated from 
-// be/be_visitor_sequence/sequence_cs.cpp:65
+// be\be_visitor_sequence/sequence_cs.cpp:65
 
 #if !defined (_TAO_SCIOPENDPOINTSEQUENCE_CS_)
 #define _TAO_SCIOPENDPOINTSEQUENCE_CS_
@@ -130,18 +126,21 @@ TAO_SCIOPEndpointSequence::~TAO_SCIOPEndpointSequence (void)
 #endif /* end #if !defined */
 
 // TAO_IDL - Generated from
-// be/be_visitor_typecode/alias_typecode.cpp:31
+// be\be_visitor_typecode/alias_typecode.cpp:31
 
 
 
 // TAO_IDL - Generated from
-// be/be_visitor_typecode/typecode_defn.cpp:914
+// be\be_visitor_typecode/typecode_defn.cpp:925
 
+
+#ifndef _TAO_TYPECODE_TAO_SCIOPEndpointSequence_GUARD
+#define _TAO_TYPECODE_TAO_SCIOPEndpointSequence_GUARD
 namespace TAO
 {
   namespace TypeCode
   {
-    TAO::TypeCode::Sequence<CORBA::TypeCode_ptr const *,
+    TAO::TypeCode::Sequence<::CORBA::TypeCode_ptr const *,
                             TAO::Null_RefCount_Policy>
       TAO_SCIOPEndpointSequence_0 (
         CORBA::tk_sequence,
@@ -154,6 +153,8 @@ namespace TAO
   }
 }
 
+
+#endif /* _TAO_TYPECODE_TAO_SCIOPEndpointSequence_GUARD */
 static TAO::TypeCode::Alias<char const *,
                             CORBA::TypeCode_ptr const *,
                             CORBA::tk_alias,
@@ -167,7 +168,7 @@ static TAO::TypeCode::Alias<char const *,
   &_tao_tc_TAO_SCIOPEndpointSequence;
 
 // TAO_IDL - Generated from
-// be/be_visitor_structure/cdr_op_cs.cpp:61
+// be\be_visitor_structure/cdr_op_cs.cpp:61
 
 CORBA::Boolean operator<< (
     TAO_OutputCDR &strm,
@@ -192,7 +193,7 @@ CORBA::Boolean operator>> (
 }
 
 // TAO_IDL - Generated from
-// be/be_visitor_sequence/cdr_op_cs.cpp:96
+// be\be_visitor_sequence/cdr_op_cs.cpp:96
 
 #if !defined _TAO_CDR_OP_TAO_SCIOPEndpointSequence_CPP_
 #define _TAO_CDR_OP_TAO_SCIOPEndpointSequence_CPP_
@@ -262,102 +263,3 @@ CORBA::Boolean operator>> (
 }
 
 #endif /* _TAO_CDR_OP_TAO_SCIOPEndpointSequence_CPP_ */
-
-// TAO_IDL - Generated from
-// be/be_visitor_root/root.cpp:1528
-
-#if defined (ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION)
-
-  template class
-    TAO_Var_Var_T<
-        TAO_SCIOP_Endpoint_Info
-      >;
-
-  template class
-    TAO_Var_Base_T<
-        TAO_SCIOP_Endpoint_Info
-      >;
-
-  template class
-    TAO_Out_T<
-        TAO_SCIOP_Endpoint_Info,
-        TAO_SCIOP_Endpoint_Info_var
-      >;
-
-  template class
-    TAO_VarSeq_Var_T<
-        TAO_SCIOPEndpointSequence,
-        TAO_SCIOP_Endpoint_Info
-      >;
-
-  template class
-    TAO_Seq_Var_Base_T<
-        TAO_SCIOPEndpointSequence,
-        TAO_SCIOP_Endpoint_Info
-      >;
-
-  template class
-    TAO_Seq_Out_T<
-        TAO_SCIOPEndpointSequence,
-        TAO_SCIOPEndpointSequence_var,
-        TAO_SCIOP_Endpoint_Info
-      >;
-
-#if !defined (_TAO_SCIOP_ENDPOINT_INFO__EXPLICIT_CS_)
-#define _TAO_SCIOP_ENDPOINT_INFO__EXPLICIT_CS_
-
-  template class
-    TAO_Unbounded_Sequence<
-        TAO_SCIOP_Endpoint_Info
-      >;
-
-#endif /* end #if !defined */
-
-#elif defined (ACE_HAS_TEMPLATE_INSTANTIATION_PRAGMA)
-
-# pragma instantiate \
-    TAO_Var_Var_T< \
-        TAO_SCIOP_Endpoint_Info \
-      >
-
-# pragma instantiate \
-    TAO_Var_Base_T< \
-        TAO_SCIOP_Endpoint_Info \
-      >
-
-# pragma instantiate \
-    TAO_Out_T< \
-        TAO_SCIOP_Endpoint_Info, \
-        TAO_SCIOP_Endpoint_Info_var \
-      >
-
-# pragma instantiate \
-    TAO_VarSeq_Var_T< \
-        TAO_SCIOPEndpointSequence, \
-        TAO_SCIOP_Endpoint_Info \
-      >
-
-# pragma instantiate \
-    TAO_Seq_Var_Base_T< \
-        TAO_SCIOPEndpointSequence, \
-        TAO_SCIOP_Endpoint_Info \
-      >
-
-# pragma instantiate \
-    TAO_Seq_Out_T< \
-        TAO_SCIOPEndpointSequence, \
-        TAO_SCIOPEndpointSequence_var, \
-        TAO_SCIOP_Endpoint_Info \
-      >
-
-#if !defined (_TAO_SCIOP_ENDPOINT_INFO__EXPLICIT_CS_)
-#define _TAO_SCIOP_ENDPOINT_INFO__EXPLICIT_CS_
-
-# pragma instantiate \
-    TAO_Unbounded_Sequence< \
-        TAO_SCIOP_Endpoint_Info \
-      >
-
-#endif /* end #if !defined */
-
-#endif /* !ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION */ 
