@@ -21,7 +21,7 @@
 //   is:
 //
 //     tao_idl
-//         -o orig -Gp -Gd -Ge 1 -Sc -Sa -DCORBA3
+//         -o orig -Gp -Gd -Ge 1 -Sc -Sa -DCORBA3 -Sci
 //          -Wb,export_macro=TAO_Strategies_Export \
 //          -Wb,export_include="strategies_export.h" \
 //          -Wb,pre_include="ace/pre.h" \
